// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should merge Datadog presets 1`] = `
{
  "connect-src": Set {
    "https://*.datadoghq.com",
    "https://browser-intake-datadoghq.com",
  },
  "worker-src": Set {
    "blob:",
  },
}
`;

exports[`should merge Google Ads presets 1`] = `
{
  "connect-src": Set {
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://google.com",
  },
  "frame-src": Set {
    "https://www.googletagmanager.com",
    "https://td.doubleclick.net",
  },
  "img-src": Set {
    "https://www.googletagmanager.com",
    "https://googleads.g.doubleclick.net",
    "https://www.google.com",
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://google.com",
  },
  "script-src": Set {
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://www.googletagmanager.com",
    "https://pagead2.googlesyndication.com",
    "https://googleads.g.doubleclick.net",
  },
}
`;

exports[`should merge Google Tag Manager presets 1`] = `
{
  "connect-src": Set {
    "https://www.googletagmanager.com",
  },
  "font-src": Set {
    "https://fonts.gstatic.com",
    "data:",
  },
  "img-src": Set {
    "https://www.googletagmanager.com",
    "https://googletagmanager.com",
    "https://ssl.gstatic.com",
    "https://www.gstatic.com",
  },
  "script-src": Set {
    "'unsafe-inline'",
    "https://www.googletagmanager.com",
    "'unsafe-eval'",
    "https://googletagmanager.com",
    "https://tagmanager.google.com",
  },
  "style-src": Set {
    "https://googletagmanager.com",
    "https://tagmanager.google.com",
    "https://fonts.googleapis.com",
  },
}
`;

exports[`should merge different categories of presets 1 1`] = `
{
  "connect-src": Set {
    "https://*.datadoghq.com",
    "https://browser-intake-datadoghq.com",
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://google.com",
    "https://*.google-analytics.com",
    "https://*.analytics.google.com",
    "https://*.googletagmanager.com",
    "https://accounts.google.com/gsi/",
    "https://www.googletagmanager.com",
    "https://www.google-analytics.com",
    "https://*.hotjar.com",
    "https://*.hotjar.io",
    "wss://*.hotjar.com",
    "https://vimeo.com",
  },
  "font-src": Set {
    "https://fonts.gstatic.com",
    "data:",
    "https://script.hotjar.com",
  },
  "frame-src": Set {
    "https://www.googletagmanager.com",
    "https://td.doubleclick.net",
    "https://accounts.google.com/gsi/",
    "https://e.infogram.com",
    "https://embed.reddit.com",
    "https://www.tiktok.com",
    "https://player.vimeo.com",
    "https://platform.twitter.com",
    "https://www.youtube.com",
    "https://www.youtube-nocookie.com",
  },
  "img-src": Set {
    "https://www.googletagmanager.com",
    "https://googleads.g.doubleclick.net",
    "https://www.google.com",
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://google.com",
    "https://*.google-analytics.com",
    "https://*.googletagmanager.com",
    "https://googletagmanager.com",
    "https://ssl.gstatic.com",
    "https://www.gstatic.com",
    "https://www.google-analytics.com",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "https://survey-images.hotjar.com",
    "https://i.vimeocdn.com",
    "https://i.ytimg.com",
  },
  "script-src": Set {
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://www.googletagmanager.com",
    "https://pagead2.googlesyndication.com",
    "https://googleads.g.doubleclick.net",
    "https://*.googletagmanager.com",
    "https://accounts.google.com/gsi/client",
    "'unsafe-inline'",
    "'unsafe-eval'",
    "https://googletagmanager.com",
    "https://tagmanager.google.com",
    "https://www.google-analytics.com",
    "https://ssl.google-analytics.com",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "https://e.infogram.com",
    "https://embed.reddit.com",
    "https://www.tiktok.com",
    "https://player.vimeo.com",
    "https://platform.twitter.com",
  },
  "style-src": Set {
    "https://accounts.google.com/gsi/style",
    "https://googletagmanager.com",
    "https://tagmanager.google.com",
    "https://fonts.googleapis.com",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "'unsafe-inline'",
  },
  "worker-src": Set {
    "blob:",
  },
}
`;

exports[`should merge different categories of presets 2 1`] = `
{
  "connect-src": Set {
    "https://*.datadoghq.com",
    "https://browser-intake-datadoghq.com",
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://google.com",
    "https://*.google-analytics.com",
    "https://*.analytics.google.com",
    "https://*.googletagmanager.com",
    "https://accounts.google.com/gsi/",
    "https://www.googletagmanager.com",
    "https://www.google-analytics.com",
    "https://*.hotjar.com",
    "https://*.hotjar.io",
    "wss://*.hotjar.com",
    "https://vimeo.com",
  },
  "font-src": Set {
    "https://fonts.gstatic.com",
    "https://script.hotjar.com",
  },
  "frame-src": Set {
    "https://www.googletagmanager.com",
    "https://td.doubleclick.net",
    "https://accounts.google.com/gsi/",
    "https://e.infogram.com",
    "https://embed.reddit.com",
    "https://www.tiktok.com",
    "https://player.vimeo.com",
    "https://platform.twitter.com",
    "https://www.youtube.com",
    "https://www.youtube-nocookie.com",
  },
  "img-src": Set {
    "https://www.googletagmanager.com",
    "https://googleads.g.doubleclick.net",
    "https://www.google.com",
    "https://pagead2.googlesyndication.com",
    "https://www.googleadservices.com",
    "https://google.com",
    "https://*.google-analytics.com",
    "https://*.googletagmanager.com",
    "https://www.google-analytics.com",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "https://survey-images.hotjar.com",
    "https://i.vimeocdn.com",
    "https://i.ytimg.com",
  },
  "script-src": Set {
    "https://www.googleadservices.com",
    "https://www.google.com",
    "https://www.googletagmanager.com",
    "https://pagead2.googlesyndication.com",
    "https://googleads.g.doubleclick.net",
    "https://*.googletagmanager.com",
    "https://accounts.google.com/gsi/client",
    "'unsafe-inline'",
    "'unsafe-eval'",
    "https://www.google-analytics.com",
    "https://ssl.google-analytics.com",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "https://e.infogram.com",
    "https://embed.reddit.com",
    "https://www.tiktok.com",
    "https://player.vimeo.com",
    "https://platform.twitter.com",
  },
  "style-src": Set {
    "https://fonts.googleapis.com",
    "https://accounts.google.com/gsi/style",
    "https://static.hotjar.com",
    "https://script.hotjar.com",
    "'unsafe-inline'",
  },
  "worker-src": Set {
    "blob:",
  },
}
`;

exports[`should merge different categories of presets 3 1`] = `
{
  "connect-src": Set {
    "https://*.google-analytics.com",
    "https://*.googletagmanager.com",
    "https://*.g.doubleclick.net",
    "https://*.google.com",
    "https://pagead2.googlesyndication.com",
    "https://*.google.ad",
    "https://*.google.ae",
    "https://*.google.com.af",
    "https://*.google.com.ag",
    "https://*.google.al",
    "https://*.google.am",
    "https://*.google.co.ao",
    "https://*.google.com.ar",
    "https://*.google.as",
    "https://*.google.at",
    "https://*.google.com.au",
    "https://*.google.az",
    "https://*.google.ba",
    "https://*.google.com.bd",
    "https://*.google.be",
    "https://*.google.bf",
    "https://*.google.bg",
    "https://*.google.com.bh",
    "https://*.google.bi",
    "https://*.google.bj",
    "https://*.google.com.bn",
    "https://*.google.com.bo",
    "https://*.google.com.br",
    "https://*.google.bs",
    "https://*.google.bt",
    "https://*.google.co.bw",
    "https://*.google.by",
    "https://*.google.com.bz",
    "https://*.google.ca",
    "https://*.google.cd",
    "https://*.google.cf",
    "https://*.google.cg",
    "https://*.google.ch",
    "https://*.google.ci",
    "https://*.google.co.ck",
    "https://*.google.cl",
    "https://*.google.cm",
    "https://*.google.cn",
    "https://*.google.com.co",
    "https://*.google.co.cr",
    "https://*.google.com.cu",
    "https://*.google.cv",
    "https://*.google.com.cy",
    "https://*.google.cz",
    "https://*.google.de",
    "https://*.google.dj",
    "https://*.google.dk",
    "https://*.google.dm",
    "https://*.google.com.do",
    "https://*.google.dz",
    "https://*.google.com.ec",
    "https://*.google.ee",
    "https://*.google.com.eg",
    "https://*.google.es",
    "https://*.google.com.et",
    "https://*.google.fi",
    "https://*.google.com.fj",
    "https://*.google.fm",
    "https://*.google.fr",
    "https://*.google.ga",
    "https://*.google.ge",
    "https://*.google.gg",
    "https://*.google.com.gh",
    "https://*.google.com.gi",
    "https://*.google.gl",
    "https://*.google.gm",
    "https://*.google.gr",
    "https://*.google.com.gt",
    "https://*.google.gy",
    "https://*.google.com.hk",
    "https://*.google.hn",
    "https://*.google.hr",
    "https://*.google.ht",
    "https://*.google.hu",
    "https://*.google.co.id",
    "https://*.google.ie",
    "https://*.google.co.il",
    "https://*.google.im",
    "https://*.google.co.in",
    "https://*.google.iq",
    "https://*.google.is",
    "https://*.google.it",
    "https://*.google.je",
    "https://*.google.com.jm",
    "https://*.google.jo",
    "https://*.google.co.jp",
    "https://*.google.co.ke",
    "https://*.google.com.kh",
    "https://*.google.ki",
    "https://*.google.kg",
    "https://*.google.co.kr",
    "https://*.google.com.kw",
    "https://*.google.kz",
    "https://*.google.la",
    "https://*.google.com.lb",
    "https://*.google.li",
    "https://*.google.lk",
    "https://*.google.co.ls",
    "https://*.google.lt",
    "https://*.google.lu",
    "https://*.google.lv",
    "https://*.google.com.ly",
    "https://*.google.co.ma",
    "https://*.google.md",
    "https://*.google.me",
    "https://*.google.mg",
    "https://*.google.mk",
    "https://*.google.ml",
    "https://*.google.com.mm",
    "https://*.google.mn",
    "https://*.google.com.mt",
    "https://*.google.mu",
    "https://*.google.mv",
    "https://*.google.mw",
    "https://*.google.com.mx",
    "https://*.google.com.my",
    "https://*.google.co.mz",
    "https://*.google.com.na",
    "https://*.google.com.ng",
    "https://*.google.com.ni",
    "https://*.google.ne",
    "https://*.google.nl",
    "https://*.google.no",
    "https://*.google.com.np",
    "https://*.google.nr",
    "https://*.google.nu",
    "https://*.google.co.nz",
    "https://*.google.com.om",
    "https://*.google.com.pa",
    "https://*.google.com.pe",
    "https://*.google.com.pg",
    "https://*.google.com.ph",
    "https://*.google.com.pk",
    "https://*.google.pl",
    "https://*.google.pn",
    "https://*.google.com.pr",
    "https://*.google.ps",
    "https://*.google.pt",
    "https://*.google.com.py",
    "https://*.google.com.qa",
    "https://*.google.ro",
    "https://*.google.ru",
    "https://*.google.rw",
    "https://*.google.com.sa",
    "https://*.google.com.sb",
    "https://*.google.sc",
    "https://*.google.se",
    "https://*.google.com.sg",
    "https://*.google.sh",
    "https://*.google.si",
    "https://*.google.sk",
    "https://*.google.com.sl",
    "https://*.google.sn",
    "https://*.google.so",
    "https://*.google.sm",
    "https://*.google.sr",
    "https://*.google.st",
    "https://*.google.com.sv",
    "https://*.google.td",
    "https://*.google.tg",
    "https://*.google.co.th",
    "https://*.google.com.tj",
    "https://*.google.tl",
    "https://*.google.tm",
    "https://*.google.tn",
    "https://*.google.to",
    "https://*.google.com.tr",
    "https://*.google.tt",
    "https://*.google.com.tw",
    "https://*.google.co.tz",
    "https://*.google.com.ua",
    "https://*.google.co.ug",
    "https://*.google.co.uk",
    "https://*.google.com.uy",
    "https://*.google.co.uz",
    "https://*.google.com.vc",
    "https://*.google.co.ve",
    "https://*.google.co.vi",
    "https://*.google.com.vn",
    "https://*.google.vu",
    "https://*.google.ws",
    "https://*.google.rs",
    "https://*.google.co.za",
    "https://*.google.co.zm",
    "https://*.google.co.zw",
    "https://*.google.cat",
  },
  "frame-src": Set {
    "https://td.doubleclick.net",
    "https://www.googletagmanager.com",
  },
  "img-src": Set {
    "https://*.google-analytics.com",
    "https://*.googletagmanager.com",
    "https://*.g.doubleclick.net",
    "https://*.google.com",
    "https://*.google.ad",
    "https://*.google.ae",
    "https://*.google.com.af",
    "https://*.google.com.ag",
    "https://*.google.al",
    "https://*.google.am",
    "https://*.google.co.ao",
    "https://*.google.com.ar",
    "https://*.google.as",
    "https://*.google.at",
    "https://*.google.com.au",
    "https://*.google.az",
    "https://*.google.ba",
    "https://*.google.com.bd",
    "https://*.google.be",
    "https://*.google.bf",
    "https://*.google.bg",
    "https://*.google.com.bh",
    "https://*.google.bi",
    "https://*.google.bj",
    "https://*.google.com.bn",
    "https://*.google.com.bo",
    "https://*.google.com.br",
    "https://*.google.bs",
    "https://*.google.bt",
    "https://*.google.co.bw",
    "https://*.google.by",
    "https://*.google.com.bz",
    "https://*.google.ca",
    "https://*.google.cd",
    "https://*.google.cf",
    "https://*.google.cg",
    "https://*.google.ch",
    "https://*.google.ci",
    "https://*.google.co.ck",
    "https://*.google.cl",
    "https://*.google.cm",
    "https://*.google.cn",
    "https://*.google.com.co",
    "https://*.google.co.cr",
    "https://*.google.com.cu",
    "https://*.google.cv",
    "https://*.google.com.cy",
    "https://*.google.cz",
    "https://*.google.de",
    "https://*.google.dj",
    "https://*.google.dk",
    "https://*.google.dm",
    "https://*.google.com.do",
    "https://*.google.dz",
    "https://*.google.com.ec",
    "https://*.google.ee",
    "https://*.google.com.eg",
    "https://*.google.es",
    "https://*.google.com.et",
    "https://*.google.fi",
    "https://*.google.com.fj",
    "https://*.google.fm",
    "https://*.google.fr",
    "https://*.google.ga",
    "https://*.google.ge",
    "https://*.google.gg",
    "https://*.google.com.gh",
    "https://*.google.com.gi",
    "https://*.google.gl",
    "https://*.google.gm",
    "https://*.google.gr",
    "https://*.google.com.gt",
    "https://*.google.gy",
    "https://*.google.com.hk",
    "https://*.google.hn",
    "https://*.google.hr",
    "https://*.google.ht",
    "https://*.google.hu",
    "https://*.google.co.id",
    "https://*.google.ie",
    "https://*.google.co.il",
    "https://*.google.im",
    "https://*.google.co.in",
    "https://*.google.iq",
    "https://*.google.is",
    "https://*.google.it",
    "https://*.google.je",
    "https://*.google.com.jm",
    "https://*.google.jo",
    "https://*.google.co.jp",
    "https://*.google.co.ke",
    "https://*.google.com.kh",
    "https://*.google.ki",
    "https://*.google.kg",
    "https://*.google.co.kr",
    "https://*.google.com.kw",
    "https://*.google.kz",
    "https://*.google.la",
    "https://*.google.com.lb",
    "https://*.google.li",
    "https://*.google.lk",
    "https://*.google.co.ls",
    "https://*.google.lt",
    "https://*.google.lu",
    "https://*.google.lv",
    "https://*.google.com.ly",
    "https://*.google.co.ma",
    "https://*.google.md",
    "https://*.google.me",
    "https://*.google.mg",
    "https://*.google.mk",
    "https://*.google.ml",
    "https://*.google.com.mm",
    "https://*.google.mn",
    "https://*.google.com.mt",
    "https://*.google.mu",
    "https://*.google.mv",
    "https://*.google.mw",
    "https://*.google.com.mx",
    "https://*.google.com.my",
    "https://*.google.co.mz",
    "https://*.google.com.na",
    "https://*.google.com.ng",
    "https://*.google.com.ni",
    "https://*.google.ne",
    "https://*.google.nl",
    "https://*.google.no",
    "https://*.google.com.np",
    "https://*.google.nr",
    "https://*.google.nu",
    "https://*.google.co.nz",
    "https://*.google.com.om",
    "https://*.google.com.pa",
    "https://*.google.com.pe",
    "https://*.google.com.pg",
    "https://*.google.com.ph",
    "https://*.google.com.pk",
    "https://*.google.pl",
    "https://*.google.pn",
    "https://*.google.com.pr",
    "https://*.google.ps",
    "https://*.google.pt",
    "https://*.google.com.py",
    "https://*.google.com.qa",
    "https://*.google.ro",
    "https://*.google.ru",
    "https://*.google.rw",
    "https://*.google.com.sa",
    "https://*.google.com.sb",
    "https://*.google.sc",
    "https://*.google.se",
    "https://*.google.com.sg",
    "https://*.google.sh",
    "https://*.google.si",
    "https://*.google.sk",
    "https://*.google.com.sl",
    "https://*.google.sn",
    "https://*.google.so",
    "https://*.google.sm",
    "https://*.google.sr",
    "https://*.google.st",
    "https://*.google.com.sv",
    "https://*.google.td",
    "https://*.google.tg",
    "https://*.google.co.th",
    "https://*.google.com.tj",
    "https://*.google.tl",
    "https://*.google.tm",
    "https://*.google.tn",
    "https://*.google.to",
    "https://*.google.com.tr",
    "https://*.google.tt",
    "https://*.google.com.tw",
    "https://*.google.co.tz",
    "https://*.google.com.ua",
    "https://*.google.co.ug",
    "https://*.google.co.uk",
    "https://*.google.com.uy",
    "https://*.google.co.uz",
    "https://*.google.com.vc",
    "https://*.google.co.ve",
    "https://*.google.co.vi",
    "https://*.google.com.vn",
    "https://*.google.vu",
    "https://*.google.ws",
    "https://*.google.rs",
    "https://*.google.co.za",
    "https://*.google.co.zm",
    "https://*.google.co.zw",
    "https://*.google.cat",
  },
  "script-src": Set {
    "https://*.googletagmanager.com",
  },
}
`;
